Ensure UUID uniqueness and support unique keys in schema
Added logic to guarantee UUID uniqueness across generated rows in DataGenerator. SchemaIntrospector now loads unique keys and marks foreign keys as unique when applicable. Table model updated to include uniqueKeys. Docker Compose reverted to postgres:15 and container name standardized.